--- a/glucose-mobi/Android/app/src/main/res/menu/nav_menu.xml
+++ b/glucose-mobi/Android/app/src/main/res/menu/nav_menu.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/recordFrag"
-        android:icon="@drawable/record"
+        android:icon="@drawable/record_filled"
         android:title="@string/record" />
 
     <item
         android:id="@+id/figureFrag"
-        android:icon="@drawable/figure"
+        android:icon="@drawable/figure_outline"
         android:title="@string/figure" />
 
     <item
         android:id="@+id/accFrag"
-        android:icon="@drawable/acc"
+        android:icon="@drawable/acc_outline"
         android:title="@string/acc" />
 </menu>
