--- a/glucose-BE/test_server/jwt/templates/index.html
+++ b/glucose-BE/test_server/jwt/templates/index.html
@@ -52,6 +52,7 @@
             })
             .then(response => response.json())
             .then(data => {
+                console.log(data)
                 if (data.success) {
                     alert('Registration successful!');
                 } else {
