--- a/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
@@ -7,12 +7,82 @@
     tools:context=".RecordFrag">
 
     <TextView
+        android:id="@+id/record_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/record"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toTopOf="@id/et_group"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/et_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/record_et_group_border"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingStart="15dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@id/submit_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/record_tv">
+
+        <EditText
+            android:id="@+id/glucose_et"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:gravity="center"
+            android:hint="@string/glucose_level"
+            android:inputType="numberDecimal"
+            android:minEms="11" />
+
+        <EditText
+            android:id="@+id/carbohydrate_et"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:gravity="center"
+            android:hint="@string/carbohydrate_intake"
+            android:inputType="numberDecimal"
+            android:minEms="11" />
+
+        <EditText
+            android:id="@+id/exercise_et"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:gravity="center"
+            android:hint="@string/exercise_duration"
+            android:inputType="numberDecimal"
+            android:minEms="11" />
+
+        <EditText
+            android:id="@+id/insulin_et"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:gravity="center"
+            android:hint="@string/insulin_injection_volume"
+            android:inputType="numberDecimal"
+            android:minEms="11" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/submit_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/submit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_group" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
