--- a/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecordFrag">
+    tools:context=".frag.RecordFrag">
 
     <TextView
         android:id="@+id/record_tv"
