--- a/glucose-mobi/Android/app/src/main/res/layout/frag_figure.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_figure.xml
@@ -7,12 +7,25 @@
     tools:context=".frag.FigureFrag">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/glucose_history_tv"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/figure"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:gravity="center"
+        android:text="@string/glucose_history"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toTopOf="@id/lineChart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lineChart"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/glucose_history_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
