--- a/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
@@ -21,7 +21,7 @@
         android:id="@+id/et_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/border"
+        android:background="@drawable/record_et_group_border"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/group_padding_margin"
