--- a/glucose-mobi/Android/app/src/main/res/values/themes.xml
+++ b/glucose-mobi/Android/app/src/main/res/values/themes.xml
@@ -1,7 +1,12 @@
 <resources>
 
-    <style name="Base.Theme.AIGlucose" parent="Theme.Material3.DynamicColors.DayNight.NoActionBar" >
+    <style name="Base.Theme.AIGlucose" parent="Theme.Material3.DynamicColors.DayNight.NoActionBar" />
+
+    <style name="Theme.AIGlucose" parent="Base.Theme.AIGlucose">
+        <item name="editTextStyle">@style/monoEt</item>
     </style>
 
-    <style name="Theme.AIGlucose" parent="Base.Theme.AIGlucose" />
+    <style name="monoEt" parent="Widget.AppCompat.EditText">
+        <item name="android:fontFamily">monospace</item>
+    </style>
 </resources>
