將"記得我"和"生物辨識登入"變為可選 onCreate彈出設定主機視窗 About us

--- a/glucose-mobi/Android/app/src/main/res/layout/dialog_host.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/dialog_host.xml
@@ -1,12 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:padding="?dialogPreferredPadding">
 
     <EditText
-        android:id="@+id/host"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="?dialogPreferredPadding" />
+        android:layout_weight="1"
+        android:enabled="false"
+        android:gravity="center"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+        android:text="@string/_192" />
+
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:enabled="false"
+        android:gravity="center"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+        android:text="@string/_168" />
+
+    <EditText
+        android:id="@+id/host_c"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:imeOptions="actionNext"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+        android:nextFocusForward="@id/host_d" />
+
+    <EditText
+        android:id="@+id/host_d"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal" />
 
 </LinearLayout>
