--- a/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
@@ -36,6 +36,7 @@
             android:layout_margin="@dimen/group_padding_margin"
             android:gravity="center"
             android:hint="@string/glucose_level"
+            android:importantForAutofill="no"
             android:inputType="numberDecimal"
             android:minEms="@integer/min_ems" />
 
@@ -45,6 +46,7 @@
             android:layout_margin="@dimen/group_padding_margin"
             android:gravity="center"
             android:hint="@string/carbohydrate_intake"
+            android:importantForAutofill="no"
             android:inputType="numberDecimal"
             android:minEms="@integer/min_ems" />
 
@@ -54,6 +56,7 @@
             android:layout_margin="@dimen/group_padding_margin"
             android:gravity="center"
             android:hint="@string/exercise_duration"
+            android:importantForAutofill="no"
             android:inputType="numberDecimal"
             android:minEms="@integer/min_ems" />
 
@@ -63,6 +66,7 @@
             android:layout_margin="@dimen/group_padding_margin"
             android:gravity="center"
             android:hint="@string/insulin_injection_volume"
+            android:importantForAutofill="no"
             android:inputType="numberDecimal"
             android:minEms="@integer/min_ems" />
 
