--- a/glucose-mobi/Android/app/src/main/res/navigation/nav_graph.xml
+++ b/glucose-mobi/Android/app/src/main/res/navigation/nav_graph.xml
@@ -6,19 +6,19 @@
 
     <fragment
         android:id="@+id/recordFrag"
-        android:name="rl.collab.aiglucose.frag.RecordFrag"
+        android:name="rl.collab.diabeat.frag.RecordFrag"
         android:label="@string/record"
         tools:layout="@layout/frag_record" />
 
     <fragment
         android:id="@+id/figureFrag"
-        android:name="rl.collab.aiglucose.frag.FigureFrag"
+        android:name="rl.collab.diabeat.frag.FigureFrag"
         android:label="@string/figure"
         tools:layout="@layout/frag_figure" />
 
     <fragment
         android:id="@+id/accFrag"
-        android:name="rl.collab.aiglucose.frag.AccFrag"
+        android:name="rl.collab.diabeat.frag.AccFrag"
         android:label="@string/acc"
         tools:layout="@layout/frag_acc" />
 </navigation>
