--- a/glucose-mobi/Android/app/src/main/res/values-night/themes.xml
+++ b/glucose-mobi/Android/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
 <resources>
 
-    <style name="Base.Theme.AIGlucose" parent="Theme.Material3.DynamicColors.DayNight.NoActionBar" />
+    <style name="Base.Theme.Diabeat" parent="Theme.Material3.DynamicColors.DayNight.NoActionBar" />
 </resources>
