--- a/glucose-mobi/Android/app/src/main/res/layout/dialog_host.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/dialog_host.xml
@@ -2,43 +2,78 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="?dialogPreferredPadding">
+    android:orientation="vertical"
+    android:paddingStart="?dialogPreferredPadding"
+    android:paddingEnd="?dialogPreferredPadding">
 
-    <EditText
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:enabled="false"
-        android:gravity="center"
-        android:inputType="numberDecimal"
-        android:text="@string/_192" />
+        android:layout_marginTop="?dialogPreferredPadding"
+        android:orientation="horizontal">
 
-    <EditText
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:enabled="false"
-        android:gravity="center"
-        android:inputType="numberDecimal"
-        android:text="@string/_168" />
+        <EditText
+            android:id="@+id/host_a"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:inputType="numberDecimal"
+            android:maxLength="3"
+            android:nextFocusForward="@id/host_b"
+            android:selectAllOnFocus="true" />
 
-    <EditText
-        android:id="@+id/host_c"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:imeOptions="actionNext"
-        android:inputType="numberDecimal"
-        android:nextFocusForward="@id/host_d" />
+        <EditText
+            android:id="@+id/host_b"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:inputType="numberDecimal"
+            android:maxLength="3"
+            android:nextFocusForward="@id/host_c"
+            android:selectAllOnFocus="true" />
 
-    <EditText
-        android:id="@+id/host_d"
-        android:layout_width="0dp"
+        <EditText
+            android:id="@+id/host_c"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:inputType="numberDecimal"
+            android:maxLength="3"
+            android:nextFocusForward="@id/host_d"
+            android:selectAllOnFocus="true" />
+
+        <EditText
+            android:id="@+id/host_d"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:imeOptions="actionDone"
+            android:inputType="numberDecimal"
+            android:maxLength="3"
+            android:selectAllOnFocus="true" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:inputType="numberDecimal" />
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="?dialogPreferredPadding"
+        android:text="@string/host_volume_up"
+        android:typeface="monospace" />
+
+    <CheckBox
+        android:id="@+id/start_up_cb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="?dialogPreferredPadding"
+        android:text="@string/start_up" />
 
 </LinearLayout>
