--- a/glucose-mobi/Android/app/src/main/res/layout/dialog_login.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/dialog_login.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="?dialogPreferredPadding"
         android:hint="@string/pw"
+        android:imeOptions="actionDone"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@id/reme_cb"
         app:layout_constraintEnd_toEndOf="parent"
