--- a/glucose-mobi/Android/app/src/main/res/layout/frag_acc.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_acc.xml
@@ -69,8 +69,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/profile_ly"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/profile_tv"
