--- a/glucose-mobi/Android/app/src/main/res/layout/dialog_host.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/dialog_host.xml
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="?dialogPreferredPadding"
-        android:text="@string/host_volume_up"
+        android:text="Tips : 按音量上顯示此設定"
         android:typeface="monospace" />
 
     <CheckBox
@@ -74,6 +74,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="?dialogPreferredPadding"
-        android:text="@string/start_up" />
+        android:text="啟動時顯示" />
 
 </LinearLayout>
