--- a/glucose-mobi/Android/app/src/main/res/layout/dialog_login.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/dialog_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="?dialogPreferredPadding"
-        android:hint="@string/acc"
+        android:hint="帳號"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@id/pw_et"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="?dialogPreferredPadding"
-        android:hint="@string/pw"
+        android:hint="密碼"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@id/reme_cb"
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="?dialogPreferredPadding"
-        android:text="@string/reme"
+        android:text="記住我"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pw_et" />
