--- a/glucose-mobi/Android/app/src/main/res/layout/frag_figure.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_figure.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/glucose_history"
+        android:text="血糖軌跡紀錄"
         android:textSize="35sp"
         app:layout_constraintBottom_toTopOf="@id/lineChart"
         app:layout_constraintEnd_toEndOf="parent"
