--- a/glucose-mobi/Android/app/src/main/res/menu/nav_menu.xml
+++ b/glucose-mobi/Android/app/src/main/res/menu/nav_menu.xml
@@ -3,15 +3,15 @@
     <item
         android:id="@+id/recordFrag"
         android:icon="@drawable/record_selector"
-        android:title="@string/record" />
+        android:title="紀錄" />
 
     <item
         android:id="@+id/figureFrag"
         android:icon="@drawable/figure_selector"
-        android:title="@string/figure" />
+        android:title="圖表" />
 
     <item
         android:id="@+id/accFrag"
         android:icon="@drawable/acc_selector"
-        android:title="@string/acc" />
+        android:title="帳號" />
 </menu>
