rename a lot of sht, api interface updated (not impl yet)

--- a/glucose-mobi/Android/app/src/main/res/menu/nav_menu.xml
+++ b/glucose-mobi/Android/app/src/main/res/menu/nav_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/recordFrag"
-        android:icon="@drawable/record_selector"
+        android:icon="@drawable/pen_selector"
         android:title="紀錄" />
 
     <item
         android:id="@+id/figureFrag"
-        android:icon="@drawable/figure_selector"
+        android:icon="@drawable/chart_selector"
         android:title="圖表" />
 
     <item
