--- a/glucose-mobi/Android/app/src/main/res/layout/frag_chart.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_chart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".frag.FigureFrag">
+    tools:context=".frag.ChartFrag">
 
     <TextView
         android:id="@+id/glucose_history_tv"
