--- a/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/group_padding_margin"
-        app:layout_constraintBottom_toTopOf="@id/submit_btn"
+        app:layout_constraintBottom_toTopOf="@id/btn_group"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/record_tv">
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/group_padding_margin"
             android:gravity="center"
-            android:hint="碳水化合物攝取量(g)"
+            android:hint="碳水攝取量(g)"
             android:inputType="numberDecimal"
             android:minEms="11" />
 
@@ -68,14 +68,31 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/submit_btn"
+    <LinearLayout
+        android:id="@+id/btn_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="送出"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_group" />
+        app:layout_constraintTop_toBottomOf="@id/et_group">
+
+        <Button
+            android:id="@+id/predict_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/awesome"
+            android:text="預測碳水量" />
+
+        <Button
+            android:id="@+id/save_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:drawableLeft="@drawable/save"
+            android:text="儲存" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
