--- a/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
@@ -31,6 +31,7 @@
         app:layout_constraintTop_toBottomOf="@id/record_tv">
 
         <EditText
+            android:id="@+id/glucose_et"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/group_padding_margin"
@@ -40,6 +41,7 @@
             android:minEms="11" />
 
         <EditText
+            android:id="@+id/carbohydrate_et"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/group_padding_margin"
@@ -49,6 +51,7 @@
             android:minEms="11" />
 
         <EditText
+            android:id="@+id/exercise_et"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/group_padding_margin"
@@ -58,6 +61,7 @@
             android:minEms="11" />
 
         <EditText
+            android:id="@+id/insulin_et"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/group_padding_margin"
@@ -83,7 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/awesome"
-            android:text="預測碳水量" />
+            android:text="AI 預測碳水量" />
 
         <Button
             android:id="@+id/save_btn"
